stop showing social icons shortly on mobile header

--- a/webroot/css/mobile-frontend.css
+++ b/webroot/css/mobile-frontend.css
@@ -29,6 +29,9 @@
       width: 95%;
       float: left;
     }
+    div.socialicons {
+        display: none;
+    }
     body.users.all .page-wrapper {
        padding: 0;
     }
